체인 샘플 추가

--- a/app/src/main/res/layout/activity_constraint_layout.xml
+++ b/app/src/main/res/layout/activity_constraint_layout.xml
@@ -65,4 +65,27 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.2" />
 
+    <Button
+        android:id="@+id/button20"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="Button"
+        app:layout_constraintEnd_toStartOf="@+id/button21"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="404dp" />
+
+    <Button
+        android:id="@+id/button21"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:text="Button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/button20"
+        tools:layout_editor_absoluteY="403dp" />
+
 </android.support.constraint.ConstraintLayout>
